# w

./: .gitignore  ASSUMPTIONS.md  CLAUDE.md  DECISIONS.md  PROJECT_STATUS.md  README.md  cbrest_COINBASE_BTCUSD_1H_UTC_2026-03-06.parquet  cbrest_COINBASE_BTCUSD_1W_UTC_2026-03-06.csv  cbrest_COINBASE_BTCUSD_1W_UTC_2026-03-06.parquet  cbrest_COINBASE_BTCUSD_6h_UTC_2026-03-06.csv  cbrest_COINBASE_BTCUSD_6h_UTC_2026-03-06.parquet  cbrest_COINBASE_BTCUSD_META_UTC_2026-03-06.json  pyproject.toml
backtest/: __init__.py  baselines.py  execution.py  gating.py  metrics.py  runner.py  walkforward.py
configs/: backtest.yaml  default.yaml
core/: coordinate_system.py
data/: extract.py  ingest_from_raw.py  ingestion.py  loader.py  validation.py
docs/: phase0_builder_output.md
jenkins_repo_docs_final/: ASSUMPTIONS.md  NON_CANONICAL_NOTICE.md
modules/: __init__.py  adjusted_angles.py  impulse.py  jttl.py  log_levels.py  measured_moves.py  origin_selection.py  sqrt_levels.py  time_counts.py
research/: __init__.py  run_phase2_smoke.py  run_phase3_smoke.py  run_phase3b1_smoke.py  run_phase3b_smoke.py  run_phase4_smoke.py  run_phase5_smoke.py  run_phase6_full.py  run_phase6_smoke.py  run_phase7_experiments.py
signals/: __init__.py  confirmations.py  confluence.py  generators_angle_families.py  generators_jttl.py  generators_measured_moves.py  generators_sqrt_levels.py  generators_time_counts.py  projections.py  signal_generation.py  signal_types.py
tests/: test_adjusted_angles.py  test_backtest_execution.py  test_backtest_runner.py  test_baselines.py  test_confirmations.py  (+23 more)
(+76 files in other folders)
